Add styles.css, change Sally's image

--- a/index.html
+++ b/index.html
@@ -3,19 +3,11 @@
 <head>
 	<meta charset="utf-8">
 	<title>Sally Resume Remix (ft. React)</title>
+	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
-<style type="text/css">
-	
-</style>
 <body>
 
-	<div id="root">
-		<intro>
-		<contact>
-		<school>
-		<employment>
-		<footer>
-	</div> <!-- ROOT -->
+	<div id="root"></div> <!-- ROOT -->
 
 
 <!-- REACT LIBRARIES -->
@@ -38,9 +30,9 @@
 		return (
 			<div id="MyApp">
 				<header id='intro'>
-					<h1>Sally Strudel</h1>
+					<h1>Sally Strudel (Lunar Lady)</h1>
 					<img 
-					src="https://ia.media-imdb.com/images/M/MV5BMTY5NzE3NzU3MF5BMl5BanBnXkFtZTgwMjg0NTQ5MDE@._V1_UX214_CR0,0,214,317_AL_.jpg" 
+					src="https://vignette.wikia.nocookie.net/dcanimated/images/4/47/Lady_Lunar.png/revision/latest?cb=20130305205111" 
 					/>
 				
 	    			<p><strong>Hello!
